Fix floating point decimal cutoff and Grid layout

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -8,7 +8,6 @@
 .main__content {
   display: grid;
   grid-template-columns: 3fr 2fr;
-  grid-template-rows: min-content;
   grid-template-areas: 
       "map blocks"
       "list blocks";
