--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,6 +1,8 @@
 .map {
   width: 100%;
-  height: auto;
+  display: flex;
+  height: min-content;
+  /* max-height: min-content; */
   padding: 10px;
   border-radius: 10px;
   border: 1px solid #6B6B6B;
